styles.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}


body {
    margin: 0;
    height: auto;
}

.wrapper {
    max-width: 1200px;
    margin: 0 auto;
    width: 80%;
}

img {
    width: 100%;
    display: block;
}

li a {
    color: white;
}

.nav-right li:hover,
li a:hover {
    text-decoration: underline;
}

/* stylings for hero section */

.hero {
    height: 100vh;
    background-image: url(./assets/image-1@2x.png);
    background-size: cover;
    background-position: center center;
    color: white;
    position: relative;
}

.hero h1 {
    display: block;
}

.hero .nav-left {
    float: left;
    color: white;
    font-size: 3vw;
    font-family: 'Kanit';
    font-style: italic;
    text-transform: uppercase;
}

.hero .nav-right {
    float: right;
    list-style: none;
    font-family: 'Catamaran';
    text-transform: uppercase;
    padding-top: 10px;
}

.hero .nav-right li {
    display: inline;
    padding: 10px;
}

.hero .nav-right i {
    display: none;
    font-size: 6vw;
}

.hero .nav-right li a {
    color: white;
    text-decoration: none;
    font-size: 1.7vw;
 
}

.hero .hero-text h1 {
    position: absolute;
    bottom: 20%;
    font-family: 'Kanit';
    font-size: 10vw;
    color: #CC1D36;
    line-height: 7vw;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    margin: 0;
    display: block;
}

.hero .hero-text p {
    position: absolute;
    font-family: 'Catamaran';
    font-size: 3vw;
    color: white;
    bottom: 14%;
    margin:0;
}

.hero-social {
    position: absolute;
    right: 2%;
    bottom: 5%;
}

.soc-list {
    padding: 0;
    margin: 0;
}

.soc-link {
    list-style: none;
}

.soc-list a:hover {
    color: #CC1D36;
}

.soc-link i.fab {
    font-size: 1.3em;
    padding: 5px;
}

/* stylings for news section */

.news-articles {
    margin: 0 auto;
}

.news-articles h2{
    text-align: center;
    font-family: 'Kanit';
    text-transform: uppercase;
    font-size: 3vw;
    line-height: 3vw;
}

.news-img {
    width: 33%;
    float: left;
    padding: 20px;
    margin: 0;
}

.news-content {
    margin: 0 auto;
    padding 0;
}

.news-img-highlight{
    float: left;
    width: 25%;
}

.news-text {
    float: right;
    width: 75%;
}

.news-text h2,
.news-text p {
    margin: 0;
    padding: 0;
    text-align: left;
    padding-left: 20px;
}

.news-text p {
    font-family: 'Lato';
    font-size: 1.3vw;
    letter-spacing: 0.3px;
    margin: 0;
}

button {
    background-color: #BA0621;
    width: auto;
    border: 1px #BA0621;
    color: white;
    font-family: 'Kanit';
    font-size: 1vw;
    text-transform: uppercase;
    padding: 5px 10px;
}

button:hover {
    background-color: black;
    color: #CC1D36;
}

.news-text button {
     margin-left: 20px;
     margin-top: 10px
}

/* stylings for model section */

.square {
    width: 50%;
    float: left;
}

.text-one, 
.text-two {
    font-family: 'Lato';
    font-size: 1vw;
    letter-spacing: 0.3px;
    padding: 50px 50px 0 50px;
    }

.text-one h2,
.text-two h2 {
    font-family: 'Kanit';
    text-transform: uppercase;
    font-size: 3.5vw;
    /* line-height: 3vw; */
    margin: 0;
}

.img-one, 
.img-two {
    background-size: cover;
    margin: 0;
}

/* stylings for link section  */

.links {
    background-image: url(./assets/oscar-aguilar-327500-unsplash@2x.png);
    background-size: cover;
    background-position: center;
    padding: 80px 0 80px 0;
}

.links .links-list {
    text-align: center;
    list-style: none;
    padding: 0;
}

.links-list .links-item {
    display: inline-block;
    padding: 0 40px 0 40px;
}

.links-item a {
    display: block;
    text-decoration: none;
    margin: 0;
}

.links-item i.fas {
    font-size: 2.5em;
    padding: 5px;
    color: #BA0621;
}

.links-item i.fas:hover {
    color: white;
}

.links-item p,
.contact-subscribe h1,
.contact-address h1,
.contact-nav-item a,
.links-item a {
    font-family: 'Kanit';
    font-size: 1.8vw;
    text-transform: uppercase;
    color: white;
    margin-top: 5px;
}

.contact-subscribe p,
.contact-address p,
footer {
    font-family: 'Lato';
    font-size: 1.2vw;
    line-height: 5px;
    letter-spacing: 0.3px;
    color: white;
    padding: 0;
}

/* stylings for contact section */

.contact {
    background-color: #BA0621 ;
    padding: 50px 0 50px 0;
}

.contact-subscribe {
    float: left;
    width: 40%;
}

input[type="email"]::placeholder {
    color: grey;
    font-size: 1.1vw;
}

input[type="submit"] {
    background-color: black;
    border: none;
    color: white;
    font-family: 'Kanit';
    font-size: 1.5vw;
    text-transform: uppercase;
    color: white;
    margin-top: 5px;
    float: left;
    width: 35%;
    margin: 0;
    height: 26px;
}

input[type="submit"]:hover {
    background-color: white;
    color: black;
}

input[type="email"] {
    float: left;
    width: 50%;
}

.contact-address {
    float: left;
    width: 30%;
}

.contact-nav {
    float: left;
    width: 30%;
    text-align: right;
}

.contact-nav a {
    text-decoration: none;
}

.contact-nav-item {
    display: block;
}

/* stylings for footer */

footer {
    background-color: black;
    color: white;
    text-align: center;
    padding: 10px 0 10px 0;
}

/* media queries begin */

@media (max-width: 480px) {
    .nav-right li a,
    .nav-left {
        display: none;
    }

    .news-articles .wrapper,
    .contact .wrapper {
    width: 95%;
    }

    .hero-social {
        display: none;
    }

    .hero .nav-right i {
        display: block;
        position: absolute;
        padding-left: 90px;
    }

    .news-articles h2{
        font-size: 6vw;
    }

    .news-images .news-img:last-child {
        display: none;
    }

    .news-img {
        width: 50%;
        padding: 5px;
    }

    .news-img-highlight{
    float: none;
    width: 100%;
    margin-top: 50px;
    }

    .news-text {
    float: none;
    margin-top: 20px;
    width: 100%;
    padding: 0;
    }

    .news-text h2,
    .news-text p {
    padding-left: 0;
    }

    .news-text p {
        margin-top: 20px;
        font-size: 3vw;
        line-height: 4vw;
    }

    .news-text button,
    button {
    font-size: 3vw;
    padding: 15px 20px;
    margin: 10px 0 30px 0;
    }

    .square {
    width: 100%;
    }

    .text-one, 
    .text-two {
    font-size: 3vw;
    letter-spacing: 0.3px;
    padding: 00px 10px 0 10px;
    text-align: center;
    }

    .text-one h2,
    .text-two h2 {
    font-size: 6vw;
    margin-top: 20px;
    }

    .links-list .links-item {
    display: block;
    }

    .links-item i.fas {
    font-size: 3em;
    }

    .links-item a {
    font-size: 4vw;
    margin-bottom: 30px;
    }

    .links {
    background-image: url(./assets/oscar-aguilar-327500-unsplash@2x.png);
    background-size: 100vh;
    background-repeat: no-repeat;
    background-color: black;
    }

    .contact {
        text-align: center;
        align-items: center;
        padding: 20px 0 20px 0;
    }

    .contact-subscribe {
    float: none;
    width: 100%;
    }

    .contact-address,
    .contact-nav {
    width: 50%;
    }

    input[type="email"] {
    width: 100%;
    margin-bottom: 10px;
    }

    input[type="email"]::placeholder {
    text-align: center;
    font-size: 3vw;
    }

    input[type="submit"] {
    font-size: 4.5vw;
    width: 100%;
    margin: 0;
    height: 40px;
    margin-bottom: 30px;
    }

    .contact-subscribe h1,
    .contact-address h1,
    .contact-nav-item a {
        font-size: 5vw;
    }

    .contact-subscribe p,
    .contact-address p,
    footer {
        font-size: 2.5vw;
    }


}

